[project]
name = "gallery"
version = "0.1.0"
dependencies = [
    # To read Toml
    "tomli",
    #To write it sometimes
    "tomli_w",
    # To check if file is image
    "filetype"
]

[project.scripts]
gallery = "gallerycmd:main"
viewer = "viewer:main"

[pytest]
testpaths = "test"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"