[project]
name = "gallery"
version = "0.3.1"
dependencies = [
    # To read Toml
    "tomli",
    #To write it sometimes
    "tomli_w",
    # To check if file is image
    "filetype"
]

[project.optional-dependencies]
test = [
 "pytest",
 # These two are needed in order to run tests for GObjects
 "pycairo",
 "pygobject",
 # This is to mock images with PIL
 "Pillow"
]

[project.scripts]
photos = "gallerycmd:main"
photo-viewer = "viewer.ui.app:main"

[tool.pytest.ini-options]
testpaths = ["test",]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
